Ui Login, Forgot, Sign Up

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_2"
     tools:context=".ForgotPassword">
 
     <androidx.constraintlayout.widget.Guideline
@@ -38,12 +39,15 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password"
+        android:fontFamily="@font/arbutus"
+        android:text="Enter your email account"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
         app:layout_constraintTop_toTopOf="@+id/guideline8"
-        app:layout_constraintVertical_bias="0.060000002" />
+        app:layout_constraintVertical_bias="0.344" />
 
     <EditText
         android:id="@+id/emailForgotPass"
@@ -51,6 +55,13 @@
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/ic_email"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/arbutus"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:textColorHint="#4E342E"
         android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -73,10 +84,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Log In"
+        android:text="Cancel"
         app:layout_constraintEnd_toEndOf="@+id/emailForgotPass"
         app:layout_constraintHorizontal_bias="0.825"
         app:layout_constraintStart_toStartOf="@+id/emailForgotPass"
         app:layout_constraintTop_toBottomOf="@+id/emailForgotPass" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="281dp"
+        android:layout_height="202dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="@+id/guideline6"
+        app:layout_constraintTop_toTopOf="@+id/guideline8"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo_3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
