--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_2"
     tools:context=".Register">
 
     <androidx.constraintlayout.widget.Guideline
@@ -38,18 +39,20 @@
         android:id="@+id/EmailRegister"
         android:layout_width="327dp"
         android:layout_height="48dp"
-        android:layout_marginTop="124dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/ic_email"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/arbutus"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        android:textColorHint="#757575"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textColorHint="#4E342E"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
         android:id="@+id/fullNameRegister"
@@ -57,10 +60,16 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:drawableStart="@drawable/ic_person"
+        android:drawablePadding="12dp"
+        android:background="@drawable/custom_input"
+        android:fontFamily="@font/arbutus"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:hint="Full Name"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        android:textColorHint="#757575"
+        android:textColorHint="#4E342E"
         app:layout_constraintEnd_toEndOf="@+id/EmailRegister"
         app:layout_constraintStart_toStartOf="@+id/EmailRegister"
         app:layout_constraintTop_toBottomOf="@+id/EmailRegister" />
@@ -71,6 +80,13 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/arbutus"
+        android:textColorHint="#4E342E"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/passwordRegister"
@@ -84,7 +100,14 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/arbutus"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:hint="Password"
+        android:textColorHint="#4E342E"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/fullNameRegister"
         app:layout_constraintHorizontal_bias="0.0"
@@ -96,6 +119,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:background="@drawable/bg_login"
+        android:fontFamily="@font/arbutus"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="@+id/confirmPasswordRegister"
         app:layout_constraintHorizontal_bias="0.497"
@@ -106,9 +131,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:fontFamily="@font/arbutus"
         android:text="Already have an account?"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/confirmPasswordRegister"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
 
@@ -116,11 +143,25 @@
         android:id="@+id/logInNowBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:fontFamily="@font/arbutus"
         android:text="LogIn Now"
+        android:textColor="@android:color/holo_orange_light"
         app:layout_constraintEnd_toEndOf="@+id/confirmPasswordRegister"
         app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="248dp"
+        android:layout_height="193dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo_3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
