--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="250dp"
+    android:fillViewport="true"
     tools:layout_editor_absoluteX="2dp"
-    tools:layout_editor_absoluteY="2dp"
-    android:fillViewport="true">
+    tools:layout_editor_absoluteY="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".MainActivity">
-
 
 
         <Button
@@ -52,8 +51,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
 </ScrollView>
+
 
