--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_2"
-    tools:context=".ForgotPassword">
+    tools:context=".ForgotPasswordActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
