--- a/app/src/main/res/layout/zumba_item_list.xml
+++ b/app/src/main/res/layout/zumba_item_list.xml
@@ -23,7 +23,7 @@
                 android:src="@drawable/daniel_picture"
                 android:layout_width="120dp"
                 android:layout_height="150dp"
-                android:id="@+id/imageView"/>
+                android:id="@+id/imageview_logo"/>
             <LinearLayout
                 android:layout_weight="1"
                 android:gravity="center"
