--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,7 +124,7 @@
             app:expandedHintEnabled="true"
             app:hintAnimationEnabled="true"
             app:hintEnabled="true"
-            app:layout_constraintBottom_toTopOf="@+id/button_login"
+            app:layout_constraintBottom_toTopOf="@+id/button_Register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_input_right"
             app:layout_constraintHorizontal_bias="0.5"
@@ -163,7 +163,7 @@
             app:layout_constraintGuide_percent="0.70" />
 
         <Button
-            android:id="@+id/button_login"
+            android:id="@+id/button_Register"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -193,7 +193,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline_button_right"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/guideline_button_left"
-            app:layout_constraintTop_toBottomOf="@+id/button_login" />
+            app:layout_constraintTop_toBottomOf="@+id/button_Register" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -220,7 +220,7 @@
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/button_register"
+                android:id="@+id/button_Login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/arbutus_regular"
