--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,16 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/textView"
+        android:layout_width="356dp"
+        android:layout_height="126dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageview_picture"
+        android:layout_width="93dp"
+        android:layout_height="114dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.833"
+        app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Menu Fragment"
-        android:textSize="25dp"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/textview_name"
+        android:layout_width="227dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="16dp"
+        android:text="Daniel Balberde"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/imageview_picture"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/button_watchlist"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:text="Save Watchlist"
+        android:textColor="#000000"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/button_history"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_history"
+        app:layout_constraintTop_toBottomOf="@+id/button_history" />
+
+    <Button
+        android:id="@+id/button_history"
+        android:layout_width="332dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:strokeColor="@color/black"
+        android:text="History"
+        android:textColor="#000000"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:strokeColor="@color/black"
+        app:strokeWidth="10dp" />
+
+    <Button
+        android:id="@+id/button_download"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:text="Download"
+        android:textColor="#000000"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/button_watchlist"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_watchlist"
+        app:layout_constraintTop_toBottomOf="@+id/button_watchlist" />
+
+    <Button
+        android:id="@+id/button_setting"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:text="Setting"
+        android:textColor="#000000"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/button_download"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_download"
+        app:layout_constraintTop_toBottomOf="@+id/button_download" />
+
+    <Button
+        android:id="@+id/button_about"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:text="About"
+        android:textColor="#000000"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/button_setting"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_setting"
+        app:layout_constraintTop_toBottomOf="@+id/button_setting" />
+
+    <Button
+        android:id="@+id/button_logout"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button"
+        android:text="Logout"
+        android:textColor="#000000"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/button_about"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_about"
+        app:layout_constraintTop_toBottomOf="@+id/button_about" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
